# libbord

./: .gitignore  README.md  VK_INTEGRATION_README.md  docker-compose.yml  libbord_техническое_задание_полная_версия.md  railway.toml
backend/: .env.example  Dockerfile  fix_review_sentiments.py  fix_review_sentiments.sql  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/auth/: router.py
backend/app/migrations/: 001_initial.sql  002_seed_data.sql  003_vk_tables.sql  004_exclude_robots.sql  005_fix_unique_constraint.sql
backend/app/models/: __init__.py  base.py  channel.py  engagement_metric.py  library.py  metric_counter.py  review.py  traffic_metric.py  vk_metric.py  vk_upload.py  yandex_token.py
backend/app/routers/: channels.py  dashboard.py  engagement_metrics.py  libraries.py  metric_counters.py  reviews.py  sync.py  vk.py  yandex_auth.py
backend/app/scheduler/: jobs.py  setup.py
backend/app/schemas/: channel.py  dashboard.py  engagement_metric.py  insights.py  library.py  metric_counter.py  review.py  vk.py  yandex.py
backend/app/services/: dashboard_service.py  insights_engine.py  period.py  sync_service.py  vk_csv_service.py  yandex_metrika.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: admin.ts  auth.ts  client.ts  dashboard.ts  vk.ts
frontend/src/context/: AuthContext.tsx  PeriodContext.tsx  RobotsContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useChartTheme.ts  useDashboardData.ts
(+45 files in other folders)
